<resources>
    <string name="app_id">crossfit.juan</string>

    <string name="app_name">크로스핏 주안</string>
    <string name="drawer_p1">내 정보</string>
    <string name="drawer_p2">1:1 문의</string>
    <string name="drawer_p3">공동구매</string>
    <string name="drawer_p4">About 크로스핏 주안</string>
    <string name="drawer_p5">네이버 카페</string>
    <string name="drawer_p6">페이스북</string>
    <string name="drawer_p7">인스타그램</string>
    <string name="title_activity_test">test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="fragment1">판매</string>
    <string name="fragment2">수요조사</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
